# agentlen

./: CHANGELOG.md  CHECKLIST.md  CLAUDE.md  CLAUDE_CODE_GUIDE.md  DATA_SOURCES.md  FEATURES.md  PROJECT.md  README.md  SCANNER_RESULTS.md  TODOLIST.md  WORKFLOW_GUIDE.md  agentlens_observer.py  openclaw_example.py  project_watcher.py  pyproject.toml  session_scanner.py  verification_report.md  workflow_tracer.py
configs/: backend-bob.yaml  devops-david.yaml  frontend-cathy.yaml  pm-frank.yaml  qa-emma.yaml  techlead-alex.yaml
dashboard/: README.md  package-lock.json  package.json
dashboard/src/: App.tsx  Dashboard.css  Dashboard.tsx  index.css  main.tsx  types.ts
dashboard/src/components/: AgentInteractionGraph.tsx  AgentSelector.tsx  CallRecordRow.tsx  CostPanel.tsx  EnhancedTraceDetail.tsx  EnhancedTraceTimeline.tsx  Header.tsx  HierarchyTree.tsx  NodeDetailPane.tsx  ProjectDetailPane.tsx  ProjectMetadataPanel.tsx  RealtimeExecutionList.tsx  RealtimeStatusPanel.tsx  SourceEventsBlock.tsx  ToolCallCard.tsx  TraceDetailBlocks.tsx  TraceList.tsx  TraceTimeline.tsx
dashboard/src/lib/: api.ts  (+7 more)
docs/: PLATFORM_LOGS.md  architecture.md  refactor-plan-2026-07.md  session-log-formats.md
scripts/: collector_service.py
src/agentlens/: __init__.py  activity.py  api.py  cli.py  collector.py  collectors.py  collectors_old.py  models.py  orchestrator.py  realtime.py  storage.py  tracer.py
src/collector/: __init__.py
src/storage/: __init__.py
tests/: simulate_skill_market.py  test_activity.py  test_api.py  test_codex_collector.py  test_collectors.py  test_storage.py
(+7 files in other folders)
